--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "axios": "^1.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.3",
+    "qs": "^6.11.0",
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "serve" : "npx nodemon app.js"
+    "serve": "npx nodemon app.js"
   }
 }
